# sos

./: .depend  .gitignore  Makefile  README.md  boot16.S  boot32.S  boot32.S.copy  build.c  head64.S  main.c
apps/: app1.S  app1.S.bak  app1.c  app2.S  app2.S.bak  app2.c
apps/fonts/: fonts.c
apps/libc/: print.h  start.S  std.h  syscall.S  types.h
apps/libdraw/: draw.c  draw.h  fonts.c
apps/libdraw/font_tools/: o.txt  readme.md  s.txt  trans.py
blog_os/: readme.md
blog_os_64/: Cargo.toml  Makefile  x86_64-blog_os.json
blog_os_64/.cargo/: config.toml
blog_os_64/src/: allocator.rs  lib.rs  vga_buffer.rs
blog_os_64/src/memory/: mod.rs  (+1 more)
drivers/: atkbd.c  vesa.c
include/: interrupt.h  mm.h  print.h  process.h  segment.h  string.h  tss.h  vesa.h
ipc/: ipc.c
kernel/: handler.S  interrupt.c  process.c  syscall.c  tss.c
lib/: string.c  tmp.md
littleos/: Makefile  bochsrc.txt  io.S  io.h  kernel.elf  kmain.c  link.ld  little_os.iso  loader.S  os.iso  readme.md
mm/: malloc.c  memory.c  page_alloc.c
nju_os/: study_os.md
nju_os/bare-metal/: a.out  main.c  readme.md  say.c
nju_os/mbr/: Makefile  a.out  init.gdb  mbr.S
nju_os/minix/: Makefile
nju_os/os_overview/: a.S  a.out  readme.me
os/: Cargo.toml  build.rs  readme.md
os/.cargo/: config
os/src/: batch.rs  console.rs  entry.asm  lang_items.rs  link_app.S  linker.ld  main.rs  sbi.rs
os/src/sync/: mod.rs
os/src/syscall/: fs.rs  mod.rs  process.rs
os/src/trap/: context.rs  mod.rs  trap.S
user/: Cargo.toml  Makefile
user/src/: console.rs  lang_item.rs  lib.rs  linker.ld  syscall.rs
(+9 files in other folders)
