[package]
name = "os"
version = "0.1.0"
edition = "2021"

[dependencies]
# has interface to sbi service
# serial read and write belong to legacy feature
sbi-rt = {version="0.0.3",features=["legacy"]}
lazy_static = {version="1.4.0", features=["spin_no_std"]}
riscv  = {git="https://github.com/rcore-os/riscv",features=["inline-asm"]}